--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uzip": "^0.20201231.0",
     "zod": "^3.23.8"
@@ -55,7 +56,6 @@
     "prettier-plugin-classnames": "^0.6.6",
     "prettier-plugin-merge": "^0.6.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tsx": "^4.10.1",
     "typescript": "^5.1.6",
