--- a/.prettierrc
+++ b/.prettierrc
@@ -5,9 +5,5 @@
   "jsxSingleQuote": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "plugins": [
-    "prettier-plugin-tailwindcss",
-    "prettier-plugin-classnames",
-    "prettier-plugin-merge"
-  ]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
